--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,6 +13,7 @@
     <p>The walk of nations would showcase new students from different parts of Africa. Students from all across Africa would be seen wearing their <a href="https://images.app.goo.gl/84ELDnjczp58PWW9A">cultural and native attires</a>. Alongside showcasing their cultures, students will also have the chance to learn and understand other cultures from around Africa ranging from Zulu, Igbo, Hausa, Fafra, Shona, and so on. You are welcome to come and see the lovely cultures in Africa</p>
     <h4>Initiation</h4>
     <p>The new cohort of students will be intiated into the ALU Community. A lighted candle will be passed on to the new students rep on behalf of his/her classmates from the May Intake rep.</p>
+    <p>The is the <a href="file:///C:/Users/Lenovo/Desktop/html_basic/tweets.html">link</a> to the tweet page.</p>
 
 
 
