--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <ul>
-            <li><a href="file:///C:/Users/Lenovo/Desktop/html_basic/tweets.html">Tweet page!</a></li>
+            <li><a href="file:///C:/Users/Lenovo/Desktop/html_basic/tweets.html">You can find my tweet page here!</a></li>
         </ul>
     </header>
     <main>
