--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,8 +3,7 @@
    <head>
      <meta charset="utf-8">
      <title>Ikaze Welcome Event</title>
-     <link href="base.css" rel="stylesheet">
-     <link href="styles.css" rel="stylesheet">
+     
    </head>
   <body>
     <header>
@@ -32,7 +31,7 @@
       </aside>
     </main>   
     <footer>
-        <p>Made by<em> Nino Of Tech</em> - <a href="<https://www.instagram.com/_gian_nino/>" target="_blank">here</a>.</p>    
+        <p>Made by<em> Nino Of Tech</em> - <a href="https://www.instagram.com/_gian_nino/>" target="_blank">here</a>.</p>    
     </footer> 
 
 
