--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -3,7 +3,8 @@
    <head>
      <meta charset="utf-8">
      <title>Ikaze Welcome Event</title>
-
+     <link href="base.css" rel="stylesheet">
+     <link href="styles.css" rel="stylesheet">
    </head>
  <body>
     <header>
